--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+alembic==1.18.0
+blinker==1.9.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
+click==8.3.1
+dishka==1.7.2
+Flask==3.1.2
+greenlet==3.3.0
 idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
 paho-mqtt==2.1.0
+psycopg2-binary==2.9.11
 pycryptodome==3.23.0
 python-dotenv==1.2.1
 requests==2.32.5
+SQLAlchemy==2.0.45
 tuya-connector-python==0.1.2
+typing_extensions==4.15.0
 urllib3==2.6.2
 websocket-client==1.9.0
+Werkzeug==3.1.5
